# Job-Applier

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/api/app/: config.py  deps.py  main.py
apps/api/app/routers/: analytics.py  answers.py  applications.py  health.py  jobs.py  ops.py  profile.py  resumes.py  settings.py  sources.py
apps/api/app/services/: analytics_service.py  application_service.py  job_service.py  profile_service.py  settings_service.py  source_service.py
apps/dashboard/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
apps/dashboard/src/app/: globals.css  page.tsx
apps/dashboard/src/app/analytics/: page.tsx
apps/dashboard/src/app/applications/: page.tsx
apps/dashboard/src/app/jobs/: page.tsx
apps/dashboard/src/components/: action-button.tsx  empty-state.tsx  export-links.tsx  layout-shell.tsx  pipeline-actions.tsx  score-bar.tsx  source-config-form.tsx  source-create-form.tsx  stat-card.tsx  status-pill.tsx
apps/dashboard/src/lib/: api.ts
apps/worker/: schedules.py  worker_main.py
apps/worker/tasks/: applications.py  cleanup.py  healthchecks.py  notifications.py  polling.py  profile.py  ranking.py  sheets_sync.py
config/: operator.yaml
data/fixtures/: sample_jobs.json
docs/: architecture.md  codex_prompts.md  operator_guide.md  setup.md
tests/unit/: test_ats_adapters.py  test_csv_sync.py  test_dedup.py  test_generic_adapter.py  test_google_adapter.py  test_jane_street_adapter.py  test_queue.py  test_ranking.py  test_source_seeder.py
(+13 files in other folders)
