[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "job-bot"
version = "0.1.0"
description = "Job application automation platform for SWE and quant roles"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "beautifulsoup4>=4.12.3",
  "celery[redis]>=5.4.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.1",
  "lxml>=5.3.0",
  "orjson>=3.10.12",
  "playwright>=1.49.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "redis>=5.2.1",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.3",
  "tenacity>=9.0.0",
  "uvicorn[standard]>=0.32.1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.13.0",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.4",
]

[tool.hatch.build.targets.wheel]
packages = ["apps", "packages"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []

